@@ -1,3 +1,4 @@
 Written by <Mirkuz> <http://www.mirkuz.net> <mecrip@libero.it>
 Extended by Danny Backx to synchronize files between OpenSync and a PDA.
 Based on the original multisync-synce plugin.
+Further maintained by Mark Ellis <mark@mpellis.org.uk>
